One icon controller, for whichever library is on the classpath (#93)
jmsfx-creator has run against any symbology library since #76. jmsfx-server did
not: it compiled against jmsfx-standard, and its icon API was 23 controllers, one
per symbol set, each binding IconRestController's six type parameters to one
set's generated enums.

Those subclasses existed for one reason. Spring converts a @PathVariable of an
enum type through Enum.valueOf, so a handler had to name a concrete enum to
accept one - which made the class per-set and the module per-library. #90 is what
that cost: several bindings were wrong, and only a request could reveal it.

The symbol set moves into the path and a HandlerMethodArgumentResolver does the
resolving. A resolver can do what a Converter cannot - see the rest of the
request - so every value is resolved within the symbol set named earlier in the
same path, and the handlers take jmsfx-core's interfaces. No generated type is
named anywhere in the module now, and 23 files are gone.

The URLs are unchanged. Each subclass's prefix was SymbolSetSummary.pathFor
applied to its set, so it is matched rather than hard-coded, and path segments
are still the enum constant names CodeElementSummary publishes.

WebController and IconGeneratorController resolve through IconLibrary.discover()
rather than SymbolSetEnum.values().

Two things this turned up:

- The server never declared what it compiled against. jmsfx-core arrived
  transitively through jmsfx-standard, so demoting that dependency broke the
  compile until jmsfx-core was declared - which it should have been all along.
- jmsfx-standard is runtime scope but not optional, unlike jmsfx-creator's.
  spring-boot:repackage leaves optional dependencies out of BOOT-INF/lib, so the
  fat jar started and then failed every request with "No IconLibrary on the
  classpath". optional is the wrong tool here anyway: it stops a dependency
  reaching consumers, and nothing consumes the server as a library. runtime al